- Fixed alignement of attributs displayed as tags in form - Fixed text alignement in module editor

--- a/www/assets/css/src/07 detail.css
+++ b/www/assets/css/src/07 detail.css
@@ -54,7 +54,7 @@ div.field.subTotal>div.value {
 	padding-top:4px;
 }
 .noWrap {
-	white-space:nowrap;
+	white-space:pre;
 }
 .borders {
 	border:1px solid black;
